Changed parallax effect.

--- a/src/index.pug
+++ b/src/index.pug
@@ -31,6 +31,7 @@ body
                         +image('bg/arms.png', 'skills__image')
             include ./sections/works.pug
 
+            //- #wrapper-bottom-bg
             .wrapper-bottom
                 .container.container__bottom
                     .wrapper-bottom__left
