--- a/src/sections/hero.pug
+++ b/src/sections/hero.pug
@@ -1,20 +1,7 @@
 section.hero
+    #parallax-component
     .container.container__hero
         include header
-        
-        .parallax
-            .parallax__layer
-                +image('parallax/layer-01.png', 'parallax__image')
-            .parallax__layer
-                +image('parallax/layer-02.png', 'parallax__image')
-            .parallax__layer
-                h1.hero-title.hero-title--parallax
-                    .hero-title__info Личный сайт веб разработчика
-                    .hero-title__name Сергей Дмитриев
-            .parallax__layer
-                +image('parallax/layer-03.png', 'parallax__image')
-            .parallax__layer
-                +image('parallax/layer-04.png', 'parallax__image')
 
         .scroll
             .scroll__title Скролл
