--- a/src/styles/sections/footer.pcss
+++ b/src/styles/sections/footer.pcss
@@ -1,6 +1,8 @@
 .footer {
     background-color: #1b1f22;
     color: #fff;
+    z-index: 10;
+    position: relative;
 
     &__left {
         width: 30%;
