--- a/src/styles/sections/hero.pcss
+++ b/src/styles/sections/hero.pcss
@@ -2,9 +2,8 @@
     width: 100vw;
     height: 100vh;
     position: relative;
-    background: #1a1f21;
 
-    &:before {
+    /* &:before {
         content: "SD";
         opacity: 0.02;
         font-size: 1280px;
@@ -15,9 +14,9 @@
         transform: translateX(-50%);
         bottom: -600px;
         width: 2560px;
-        /* height: 100%; */
+        height: 100%;
         color: #fff;
-    }
+    } */
 
     @include tablets() {
         &:before {
