--- a/src/styles/blocks/container.pcss
+++ b/src/styles/blocks/container.pcss
@@ -12,7 +12,6 @@
         align-items: center;
         justify-content: space-between;
         flex-direction: column;
-        padding-bottom: 250px;
 
         @include phones() {
             padding-top: 0 !important;
@@ -70,6 +69,8 @@
 
     &__bottom {
         flex-direction: column;
+        padding-bottom: 200px;
+        padding-top: 140px;
 
         @include phones() {
             padding-top: 0 !important;
