--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -1,39 +1,25 @@
 .parallax {
-    
-    position: absolute;
-    top: 0;
+    position: fixed;
     left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
-    overflow-x: hidden;
-    overflow-y: auto;
-    perspective: 100px;
+    overflow: hidden;
+    z-index: -10;
 
-    &__layer {
-        position: relative;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-    }
-
-    &__image {
-        position: absolute;
-        min-width: 100%;
-        min-height: 100%;
-        object-fit: cover;
-        object-position: center 30%;
-    }
-    &:after {
-        content: "";
-        display: block;
-        height: 100vh;
-        width: 100%;
+    &__image-wrap {
+        /* position: absolute; */
+        
+        &:after {
+            content: "";
+            width: 100vw;
+            height: 1000vh;
+            display: block;
+        }
     }
 }
 
-$layers: 6;
+/* $layers: 6;
 
 @for $layerNum from $layers through 1 {
     .parallax__layer:nth-child(#{$layerNum}) {
@@ -50,6 +36,7 @@ $layers: 6;
         margin-top: 0;
     }
     .parallax__layer:last-child {
+        transform: translateZ(-250px) scale(3.5);
         &:before {
             content: "";
             position: absolute;
@@ -61,20 +48,10 @@ $layers: 6;
             background: linear-gradient(0deg, rgba(27,31,34,1) 0%, rgba(27,31,34,.99) 10%, rgba(27,31,34,.97) 20%, rgba(27,31,34,.94) 30%, rgba(27,31,34,.90) 40%, rgba(27,31,34,.85) 50%, rgba(27,31,34,.79) 60%, rgba(27,31,34,.72) 70%, rgba(0,0,0,0) 100%);
 
         }
-        /* &:after {
-            content: "";
-            position: absolute;
-            z-index: 5;
-            left: 0;
-            bottom: -100%;
-            height: 100%;
-            width: 100%;
-            background: rgba(27,31,34,1);
-        } */
     }
 }
 
-@include tablets() {
+/* @include tablets() {
     .parallax__layer {
         &:nth-child(3) {
             transform: translateZ(-50px) scale(1.5);
@@ -85,14 +62,18 @@ $layers: 6;
             z-index: -20;
         }
     }
-}
-
-
-
-/* .maincontent {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
-    background: #fff;
 } */
+
+.Masthead {
+    height: 100% !important;
+    /* min-height: 100vw !important; */
+    width: 100% !important;
+    /* min-width: 100vh !important; */
+    position: absolute !important;
+
+    @include tablets() {
+        &:nth-child(3) {
+            z-index: 3;
+        }
+    }
+}
