--- a/src/styles/blocks/scroll.pcss
+++ b/src/styles/blocks/scroll.pcss
@@ -1,5 +1,9 @@
 .scroll {
-    z-index: 150;
+    z-index: -5;
+    position: fixed;
+    bottom: 250px;
+    left: 50%;
+    transform: translateX(-50%);
 
     &__title {
         color: #fff;
