--- a/src/styles/sections/wrapper-bottom.pcss
+++ b/src/styles/sections/wrapper-bottom.pcss
@@ -2,11 +2,10 @@
     background: url(../images/bg/bg_bottom.jpg) #ccc top center no-repeat;
     background-size: cover;
     text-align: left;
-    padding-top: 140px;
-    padding-bottom: 200px;
     display: flex;
     align-items: flex-start;
     position: relative;
+    overflow: hidden;
 
     &__left {
         max-width: 1100px;
