--- a/src/templates/entry.pug
+++ b/src/templates/entry.pug
@@ -3,3 +3,5 @@ include ./components/works.pug
 include ./components/navigation.pug
 include ./components/message.pug
 include ./components/feedbacks.pug
+include ./components/parallax.pug
+include ./components/bottom-bg.pug
