Added some functionality to admin works-page. Beginning of adding info to main page form thу server

--- a/src/templates/components/skills.pug
+++ b/src/templates/components/skills.pug
@@ -1,6 +1,6 @@
 script(type="text/x-template")#skills-block
     .skills-container
-        .skills-block(v-for="skill in skills" :key="skill.skillsGroup")
+        .skills-block(v-for="skill in skills" :key="skill.category")
             skills-row(
                 :skill="skill"
             )
