Added reviews to main page. Added ability to edit reviews

--- a/src/styles/sections/about.pcss
+++ b/src/styles/sections/about.pcss
@@ -7,11 +7,11 @@
 
     &__left {
         display: inline-block;
-        /* min-width: 50%; */
         text-align: left;
 
         @include phones() {
             display: block;
+            margin: 0 auto;
         }
     }
     &__right {
