--- a/src/templates/components/skills.pug
+++ b/src/templates/components/skills.pug
@@ -1,28 +1,30 @@
 script(type="text/x-template")#skills-block
     .skills-container
-        .skills-block(v-for="skill in skills" :key="skill.category")
+        .skills-block(v-for="category in categories" :key="category.id")
             skills-row(
-                :skill="skill"
+                :category="category"
+                :skills="filterSkillsByCategoryId(category.id)"
             )
 
 script(type="text/x-template")#skills-row
     .skills-row
-        h3.title.title--small {{skill.skillsGroup}}
+        h3.title.title--small {{category.category}}
         ul.skills-list
-            li.skills-list__item(v-for="(skillPercents, skillName) in skill.skills")
-                skill(
-                    :skillName="skillName"
-                    :skillPercents = "skillPercents"
-                )
+            skill(
+                v-for="skill in skills"
+                :key="skill.id"
+                :skill="skill"
+            )
 
 script(type="text/x-template")#skill
-    .skills-list__skill
-        svg(width="126" height="126" preserveAspectRatio="none").skills-list__level
-            linearGradient(id="orange" x1="0%" y1="0%" x2="100%" y2="0%")
-                stop(offset="0%" stop-color="#ed7400")
-                stop(offset="100%" stop-color="#f29400")
+    li.skills-list__item
+        .skills-list__skill
+            svg(width="126" height="126" preserveAspectRatio="none").skills-list__level
+                linearGradient(id="orange" x1="0%" y1="0%" x2="100%" y2="0%")
+                    stop(offset="0%" stop-color="#ed7400")
+                    stop(offset="100%" stop-color="#f29400")
 
-            
-            circle(r="60" cx="63" cy="63").skills-list__circle.skills-list__circle--under
-            circle(r="59" cx="63" cy="63" ref="color-circle" stroke="url(#orange)").skills-list__circle.skills-list__circle--above
-        .skills-list__name {{skillName}}
+                
+                circle(r="60" cx="63" cy="63").skills-list__circle.skills-list__circle--under
+                circle(r="59" cx="63" cy="63" ref="color-circle" stroke="url(#orange)").skills-list__circle.skills-list__circle--above
+            .skills-list__name {{skill.title}}
