Added page scroller, added real social icons, added some cosmetics changes to main page

--- a/src/index.pug
+++ b/src/index.pug
@@ -20,7 +20,7 @@ body
             include ./sections/hero.pug
             include ./sections/about.pug
             //- include ./sections/skills.pug
-            section.skills
+            section.skills#skills
                 .container.container__skills
                     .skills__right
                         h2.title Чем я могу быть полезен вам
