--- a/src/sections/works.pug
+++ b/src/sections/works.pug
@@ -1,4 +1,4 @@
-section.works
+section.works#works
     .container.container__works.container__works--title
         h2.title.title--dark Мои работы
     #slider-container
