--- a/src/styles/blocks/scroll.pcss
+++ b/src/styles/blocks/scroll.pcss
@@ -23,7 +23,7 @@
         }
     }
 
-    /* @include phones() {
+    @media screen and (max-height: 480px) {
         display: none;
-    } */
+    }
 }
