--- a/src/templates/entry.pug
+++ b/src/templates/entry.pug
@@ -5,3 +5,4 @@ include ./components/message.pug
 include ./components/feedbacks.pug
 include ./components/parallax.pug
 include ./components/bottom-bg.pug
+include ./components/footer.pug
