--- a/src/sections/footer.pug
+++ b/src/sections/footer.pug
@@ -1,28 +1,2 @@
 footer.footer
-    .container.container__footer
-        .footer__left
-            .copyright  &copy; 2019
-            .hero-title.footer__hero-title
-                .hero-title__name.footer__hero-name Сергей Дмитриев
-                .hero-title__info.footer__hero-info Личный сайт веб-разработчика
-        .footer__right
-            .footer__menu
-                +nav('footer__nav', ['Главная',
-                    'Обо мне',
-                    'Навыки',
-                    'Работы',
-                    'Отзывы',
-                    'Связаться'], 3)
-            .footer__bottom
-                .footer__info
-                    .content.footer__about Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool
-                    .socials
-                        ul.socials__list
-                            each social in ['instagram', 'vk', 'github']
-                                li.socials__item
-                                    a(href="#").socials__link.socials__link--circle
-                                        //- +icon(`${social}`, `${social} socials__icon`)
-                                        i(class=`fab fa-${social} socials__icon`)
-                .quote.footer__quote
-                    article.quote__article Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живёте 
-                    .quote__name Martin Golding
+    #footer-component
