Main page is ready to production

--- a/src/index.pug
+++ b/src/index.pug
@@ -18,28 +18,16 @@ body
             section.hero#hero
                 #parallax-component
                 #hero-component
-                //- .container.container__hero
-
-                //-     header.header
-                //-         .logo SD
-                        
-                //-         #navigation-component
-                //-         #socials-component
-
-                //-         #nav-button
-                //-     #scroll-component
             section.about#about
                 #about-component
             section.skills#skills
                 #skills-component
             section.works#works
-                .container.container__works.container__works--title
-                    h2.title.title--dark Мои работы
                 #slider-container
             .wrapper-bottom
-                .container.container__bottom
+                .container.container__bottom#reviews
                     .wrapper-bottom__left
-                        section.reviews#reviews
+                        section.reviews
                             #reviews-component
                             #feedbacks-component
                         section.contact#contact
