--- a/src/styles/blocks/container.pcss
+++ b/src/styles/blocks/container.pcss
@@ -59,6 +59,7 @@
         &--title {
             padding-top: 90px;
             padding-bottom: 0;
+            z-index: 50;
 
             @include phones() {
                 padding-bottom: 30px !important;
