--- a/src/styles/blocks/skills-list.pcss
+++ b/src/styles/blocks/skills-list.pcss
@@ -52,6 +52,7 @@
             stroke-width: 9px;
             stroke-dashoffset: 100;
             stroke-dasharray: 371;
+            transition: ease-in-out 2s;
         }
     }
 }
