--- a/src/styles/sections/hero.pcss
+++ b/src/styles/sections/hero.pcss
@@ -34,11 +34,12 @@
     &:after {
         content: "";
         position: absolute;
-        z-index: 5;
+        pointer-events: none;
         left: 0;
         bottom: 0;
         height: 250px;
         width: 100%;
+        z-index: 1;
         background: linear-gradient(0deg,
             rgba(27,31,34,1) 0%,
             rgba(27,31,34,.95) 10%,
