--- a/src/styles/sections/skills.pcss
+++ b/src/styles/sections/skills.pcss
@@ -3,6 +3,7 @@
     background-size: cover;
     width: 100vw;
     position: relative;
+    z-index: 50;
 
     &__left {
         width: 33%;
@@ -20,6 +21,8 @@
         }
     }
     &__right {
+        width: 50%;
+
         @include desktop() {
             width: 45%;
         }
