--- a/src/styles/sections/wrapper-bottom.pcss
+++ b/src/styles/sections/wrapper-bottom.pcss
@@ -1,6 +1,8 @@
 .wrapper-bottom {
-    background: url(../images/bg/bg_bottom.jpg) #ccc top center no-repeat;
+    z-index: 50;
+    background: url(../images/bg/bg_bottom.jpg) #ccc center no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     text-align: left;
     display: flex;
     align-items: flex-start;
