--- a/src/templates/components/hero.pug
+++ b/src/templates/components/hero.pug
@@ -35,8 +35,7 @@ script(type="text/x-template")#hamburger
         span.hamburger-box
             span.hamburger-inner
 
-script(type="text/x-template")#scroll   
-    .scroll       
-        a(v-scroll-to="'#about'").scroll__icon
-            span
-            div Scroll
+script(type="text/x-template")#scroll          
+    a(v-scroll-to="'#about'").scroll
+        span
+        div Scroll
