--- a/src/styles/blocks/header.pcss
+++ b/src/styles/blocks/header.pcss
@@ -3,6 +3,7 @@
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    z-index: 200;
+    justify-content: space-around;
+    position: fixed;
+    z-index: 1;
 }
