--- a/src/styles/blocks/parallax.pcss
+++ b/src/styles/blocks/parallax.pcss
@@ -49,7 +49,7 @@
 
         }
     }
-}
+}*/
 
 /* @include tablets() {
     .parallax__layer {
@@ -66,14 +66,12 @@
 
 .Masthead {
     height: 100% !important;
-    /* min-height: 100vw !important; */
     width: 100% !important;
-    /* min-width: 100vh !important; */
     position: absolute !important;
 
     @include tablets() {
         &:nth-child(3) {
-            z-index: 3;
+            z-index: 0 !important;
         }
     }
 }
