--- a/src/styles/blocks/scroll.pcss
+++ b/src/styles/blocks/scroll.pcss
@@ -1,71 +1,64 @@
 .scroll {
+    padding-top: 60px;
     position: fixed;
     bottom: 250px;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, 0);
+    color: #fff;
+    font : normal 400 20px/1 'Josefin Sans', 'Open Sans', sans-serif;
+    letter-spacing: .1em;
+    text-decoration: none;
+    transition: opacity .3s;
 
-    a {
-        padding-top: 60px;
-        position: absolute;
-        bottom: 20px;
-        left: 50%;
-        z-index: 2;
-        display: inline-block;
-        -webkit-transform: translate(0, -50%);
-        transform: translate(0, -50%);
-        color: #fff;
-        font : normal 400 20px/1 'Josefin Sans', 'Open Sans', sans-serif;
-        letter-spacing: .1em;
-        text-decoration: none;
-        transition: opacity .3s;
-
-        &:hover {
-            opacity: 0.5;
-        }
-    }
-    a span {
-        position: absolute;
-        top: 0;
-        left: 50%;
-        width: 30px;
-        height: 50px;
-        margin-left: -15px;
-        border: 2px solid #fff;
-        border-radius: 50px;
-        box-sizing: border-box;
-    }
-    a span::before {
-        position: absolute;
-        top: 10px;
-        left: 50%;
-        content: '';
-        width: 6px;
-        height: 6px;
-        margin-left: -3px;
-        background-color: #fff;
-        border-radius: 100%;
-        animation: sdb10 2s infinite;
-        box-sizing: border-box;
-    }
-    @keyframes sdb10 {
-        0% {
-            transform: translate(0, 0);
-            opacity: 0;
-        }
-        40% {
-            opacity: 1;
-        }
-        80% {
-            transform: translate(0, 20px);
-            opacity: 0;
-        }
-        100% {
-            opacity: 0;
-        }
+    &:hover {
+        opacity: 0.5;
     }
 
     @media screen and (max-height: 480px) {
         display: none;
     }
 
+    @media screen and (max-width: 480px) {
+        bottom: 100px;
+    }
+}
+.scroll span {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 30px;
+    height: 50px;
+    margin-left: -15px;
+    border: 2px solid #fff;
+    border-radius: 50px;
+    box-sizing: border-box;
+}
+.scroll span::before {
+    position: absolute;
+    top: 10px;
+    left: 50%;
+    content: '';
+    width: 6px;
+    height: 6px;
+    margin-left: -3px;
+    background-color: #fff;
+    border-radius: 100%;
+    animation: sdb10 2s infinite;
+    box-sizing: border-box;
+}
+@keyframes sdb10 {
+    0% {
+        transform: translate(0, 0);
+        opacity: 0;
+    }
+    40% {
+        opacity: 1;
+    }
+    80% {
+        transform: translate(0, 20px);
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
 }
