--- a/src/styles/blocks/slider.pcss
+++ b/src/styles/blocks/slider.pcss
@@ -8,27 +8,43 @@
 
     &__thumb {
         transition: ease-in-out .2s;
-        border: 0 solid #f29400;
         display: inline-block;
         height: 100px;
         width: 160px;
         overflow: hidden;
 
-        &:hover, &_active {
-            /* margin: 0 2px; */
+        :before {
+            content: "";
             border: 3px solid #f29400;
+            background: rgba(0, 0, 0, 0);
+            position: absolute;
+            height: 94px;
+            width: 154px;
+            left: 0;
+            top: 0;
             transition: ease-in-out .2s;
+            opacity: 0;
+        }
+
+        &:hover, &_active {
+            transition: ease-in-out .2s;
+
+            :before {
+                opacity: 1;
+                background: rgba(0, 0, 0, .5);
+            }
         }
     }
 
     &__thumb-link {
-
+        position: absolute;
     }
 
     &__image {
         width: 100%;
         z-index: 3;
         position: relative;
+        box-shadow: 0.25rem 0.1875rem 1.25rem rgba(0,0,0,.07);
     }
     &__small-image {
 
