--- a/src/styles/blocks/socials.pcss
+++ b/src/styles/blocks/socials.pcss
@@ -8,6 +8,27 @@
 
         .socials__item {
             display: inline-block;
+            margin-left: 30px;
+
+            @include phones() {
+                margin-left: 20px;
+            }
+
+            &--circle {
+                margin-right: 40px;
+                margin-left: 0;
+
+                @include phones() {
+                    margin-right: 20px;
+                }
+            }
+
+            &:first-child {
+                margin-left: 0;
+            }
+            &:last-child {
+                margin-right: 0;
+            }
         }
         .socials__icon {
             &:before {
@@ -17,7 +38,6 @@
         }
     }
     &__link {
-        margin-left: 30px;
         width: 30px;
         height: 30px;
         display: block;
@@ -31,7 +51,6 @@
 
         &--circle {
             margin-left: 0;
-            margin-right: 40px;
             width: 50px;
             height: 50px;
             display: flex;
