--- a/src/templates/components/scroll.pug
+++ b/src/templates/components/scroll.pug
@@ -1,5 +1,4 @@
 script(type="text/x-template")#scroll-block   
-    .scroll       
-        a(v-scroll-to="'#about'").scroll__icon
-            span
-            div Scroll
+    a(v-scroll-to="'#about'").scroll
+        span
+        div Scroll
