--- a/src/templates/components/skills.pug
+++ b/src/templates/components/skills.pug
@@ -7,8 +7,10 @@ script(type="text/x-template")#skills-block
                 .skills-container
                     .skills-block(v-for="category in categories" :key="category.id")
                         skills-row(
+                            v-waypoint="{ active: true, callback: onWaypoint, options: intersectionOptions }"
                             :category="category"
                             :skills="filterSkillsByCategoryId(category.id)"
+                            :waypointed="waypointed"
                         )
         .skills__left
             img(:src="leftImage").skills__image
@@ -21,6 +23,7 @@ script(type="text/x-template")#skills-row
                 v-for="skill in skills"
                 :key="skill.id"
                 :skill="skill"
+                :waypointed="waypointed"
             )
 
 script(type="text/x-template")#skill
@@ -33,5 +36,5 @@ script(type="text/x-template")#skill
 
                 
                 circle(r="60" cx="63" cy="63").skills-list__circle.skills-list__circle--under
-                circle(r="59" cx="63" cy="63" ref="color-circle" stroke="url(#orange)").skills-list__circle.skills-list__circle--above
+                circle(r="59" cx="63" cy="63" ref="color-circle" stroke="url(#orange)" :class="{active: waypointed}").skills-list__circle.skills-list__circle--above
             .skills-list__name {{skill.title}}
