Translate to english

--- a/src/templates/components/message.pug
+++ b/src/templates/components/message.pug
@@ -1,13 +1,13 @@
 script(type="text/x-template")#message-block
     .message-wrap
-        h2.title.title--big Связаться со мной
+        h2.title.title--big Contact with me
         form.form(id="message")
             .form__block
                 .form__field
                     .form__left  
                         +icon('user', 'form__icon')
                     .form__right
-                        label.form__label(:class="{active: nameActive}") Ваше имя
+                        label.form__label(:class="{active: nameActive}") Your name
                         input(type="text" name="name" @focus="toggleName()" @blur="toggleName()" v-model="nameFilled").form__input
                         
 
@@ -15,7 +15,7 @@ script(type="text/x-template")#message-block
                     .form__left 
                         +icon('envelope', 'form__icon')
                     .form__right
-                        label.form__label(:class="{active: emailActive}") Введите выш email
+                        label.form__label(:class="{active: emailActive}") Enter your email
                         input(type="text" name="email" @focus="toggleEmail()" @blur="toggleEmail()" v-model="emailFilled").form__input
 
             .form__block
@@ -23,7 +23,7 @@ script(type="text/x-template")#message-block
                     .form__left.form__left--message
                         +icon('message', 'form__icon')
                     .form__right.form__right--message
-                        label.form__label(:class="{active: messageActive}") Сообщение к письму
+                        label.form__label(:class="{active: messageActive}") Message to letter
                         textarea(name="message" @focus="toggleMessage()" @blur="toggleMessage()" v-model="messageFilled").form__input.form__input--message
             .button-block
-                button(type="submit" value="Отправить" form="message").button.button--send Отправить
+                button(type="submit" value="Send" form="message").button.button--send Send
