--- a/src/templates/components/parallax.pug
+++ b/src/templates/components/parallax.pug
@@ -7,8 +7,8 @@ script(type="text/x-template")#parallax-block
         parallax(:speedFactor="0.15")
             .hero-name
                 h1.hero-title.hero-title--parallax
-                    .hero-title__info Личный сайт веб разработчика
-                    .hero-title__name Сергей Дмитриев
+                    .hero-title__info Personal developer website
+                    .hero-title__name Sergei Dmitrijev
         parallax(:speedFactor="0.2")
             +image('parallax/layer-03.png', 'parallax__image')
         parallax(:speedFactor="0.3")
