--- a/src/templates/components/footer.pug
+++ b/src/templates/components/footer.pug
@@ -3,8 +3,8 @@ script(type="text/x-template")#footer-block
         .footer__left
             .copyright  &copy; 2019
             .hero-title.footer__hero-title
-                .hero-title__name.footer__hero-name Сергей Дмитриев
-                .hero-title__info.footer__hero-info Личный сайт веб-разработчика
+                .hero-title__name.footer__hero-name Sergei Dmitrijev
+                .hero-title__info.footer__hero-info Personal developer website
         .footer__right
             .footer__menu
                 nav.footer__nav
@@ -13,13 +13,13 @@ script(type="text/x-template")#footer-block
                             a.footer__nav__link(v-scroll-to="item.link") {{item.name}}
             .footer__bottom
                 .footer__info
-                    .content.footer__about Этот сайт я сделал в рамках обучения в Школе онлайн образования Loftschool
+                    .content.footer__about This site is a part of the training
                     .socials
                         ul.socials__list
                             li.socials__item.socials__item--circle(v-for="social in socials" :key="social.id")
                                 a(:href="social.link" target="_blank").socials__link.socials__link--circle
                                     i(class="fab socials__icon" :class="`fa-${social.name}`")
                 .quote.footer__quote
-                    article.quote__article Всегда пишите код так, будто сопровождать его будет склонный к насилию психопат, который знает где вы живёте 
+                    article.quote__article Always code as if the guy who ends up maintaining your code will be a violent psychopath who knows where you live
                     .quote__name Martin Golding
     
