--- a/src/templates/components/skills.pug
+++ b/src/templates/components/skills.pug
@@ -1,8 +1,8 @@
 script(type="text/x-template")#skills-block
     .container.container__skills
         .skills__right
-            h2.title Чем я могу быть полезен вам
-            .content.skills__content Этот сайт я сделал в рамках обучения в Школе онлайн образования LoftSchool. Чуть позже я освежу в нём свой контент. А пока посмотрите, как тут всё классно и красиво!
+            h2.title How can I help you
+            .content.skills__content I made this site as part of my studies at LoftSchool Online Education School. A little later I will refresh my content in it. In the meantime, see how everything is cool and beautiful here!
             .skills__widget
                 .skills-container
                     .skills-block(v-for="category in categories" :key="category.id")
