Added form chenged and added functionality

--- a/src/styles/blocks/button.pcss
+++ b/src/styles/blocks/button.pcss
@@ -35,14 +35,14 @@
         }
     }
     &--send {
-        padding: 35px 120px;
-        width: auto;
-        height: auto;
-        background: linear-gradient(to right, #ea7400 0%, #f29400 100%);
+        width: 320px;
+        height: 80px !important;
+        background: linear-gradient(to right, #ea7400 0%, #f29400 100%) !important;
         border: none;
         color: #fff;
-        font-size: 18px;
-        font-weight: 700;
+        font-size: 18px !important;
+        font-weight: 700 !important;
+        font-family: 'Open Sans', Helvetica, sans-serif;
         text-transform: uppercase;
         position: relative;
 
