--- a/src/styles/blocks/link.pcss
+++ b/src/styles/blocks/link.pcss
@@ -7,10 +7,11 @@
         fill: #4b6fd7;
     }
     span {
-        color: #4b6fd7;
-        font-size: 18px;
+        color: #4b6fd7 !important;
+        font-size: 18px !important;
         font-weight: 700;
         line-height: 48px;
         display: inline-block;
+        font-family: 'Open Sans', sans-serif !important;
     }
 }
