--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -31,9 +31,8 @@
         &__link {
             font-size: 18px;
             font-weight: 700 !important;
-            text-transform: uppercase;
+            text-transform: uppercase !important;
             padding: 35px 120px;
-            display: block;
         }
 
         &:before {
@@ -130,9 +129,11 @@
         }
     }
     &__link {
-        color: #fff;
+        color: #fff !important;
+        font-family: 'Open Sans', Helvetica, sans-serif !important;
         font-weight: 400;
         line-height: 30px;
-        text-decoration: none;
+        text-decoration: none !important;
+        text-transform: uppercase !important;
     }
 }
