--- a/src/styles/blocks/scroll.pcss
+++ b/src/styles/blocks/scroll.pcss
@@ -4,8 +4,8 @@
     bottom: 250px;
     left: 50%;
     transform: translate(-50%, 0);
-    color: #fff;
-    font : normal 400 20px/1 'Josefin Sans', 'Open Sans', sans-serif;
+    color: #fff !important;
+    font : normal 400 20px/1 'Josefin Sans', 'Open Sans', sans-serif !important;
     letter-spacing: .1em;
     text-decoration: none;
     transition: opacity .3s;
