--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -15,9 +15,9 @@ body {
   font-family: 'Open Sans', Helvetica, sans-serif;
   font-size: 16px;
   line-height: 1.42;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  color: $text-color;
+  -webkit-font-smoothing: antialiased!;
+  -moz-osx-font-smoothing: grayscale!;
+  color: $text-color!;
 }
 
 .wrapper {
