--- a/src/styles/sections/footer.pcss
+++ b/src/styles/sections/footer.pcss
@@ -58,10 +58,10 @@
             margin: 0 50px 10px 0;
         }
         &__link {
-            color: #fff;
-            font-weight: 400;
-            line-height: 30px;
-            text-decoration: none;
+            color: #fff !important;
+            font-weight: 400 !important;
+            line-height: 30px !important;
+            text-decoration: none !important;
         }
     }
 
