--- a/src/styles/blocks/form.pcss
+++ b/src/styles/blocks/form.pcss
@@ -62,7 +62,7 @@
     }
     &__input {
         font-size: 18px !important;
-        height: 4rem !important;
+        min-height: 4rem !important;
         font-family: 'Open Sans', Helvetica, sans-serif !important;
 
         &--textarea {
