Changed form funcionality; Bug fixes

--- a/src/styles/blocks/form.pcss
+++ b/src/styles/blocks/form.pcss
@@ -117,3 +117,10 @@ input:-webkit-autofill {
     -webkit-animation-name: autofill;
     -webkit-animation-fill-mode: both;
 }
+
+.md-progress-bar.md-theme-default.md-indeterminate .md-progress-bar-fill:after, .md-progress-bar.md-theme-default.md-indeterminate .md-progress-bar-track:after, .md-progress-bar.md-theme-default.md-query .md-progress-bar-fill:after, .md-progress-bar.md-theme-default.md-query .md-progress-bar-track:after {
+    background-color: #f29400 !important;
+}
+.md-progress-bar.md-theme-default.md-indeterminate, .md-progress-bar.md-theme-default.md-query {
+    background-color: rgba(242, 148, 0, .3) !important;
+}
