--- a/src/templates/components/feedbacks.pug
+++ b/src/templates/components/feedbacks.pug
@@ -1,6 +1,6 @@
 script(type="text/x-template")#reviews-block 
     .reviews__top-block
-        h2.title.reviews__title.title--big What they say about me
+        h2.title.reviews__title.title--big They say about me
         .reviews__buttons
             button( @click="previous()" ).button.reviews__button.button--circle
                 +icon('arrow-right', 'button__arrow')
