--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -33,6 +33,7 @@
             font-weight: 700 !important;
             text-transform: uppercase !important;
             padding: 35px 120px;
+            display: block;
         }
 
         &:before {
