--- a/src/styles/layout/base.pcss
+++ b/src/styles/layout/base.pcss
@@ -13,7 +13,7 @@ html {
 
 body {
   font-family: 'Open Sans', Helvetica, sans-serif;
-  font-size: 16px;
+  font-size: 16px !important;
   line-height: 1.42;
   -webkit-font-smoothing: antialiased!;
   -moz-osx-font-smoothing: grayscale!;
@@ -84,6 +84,7 @@ button[type="button"] {
 a {
   color: inherit;
   cursor: pointer;
+  text-decoration: none !important;
 }
 
 img {
