--- a/src/styles/blocks/logo.pcss
+++ b/src/styles/blocks/logo.pcss
@@ -1,10 +1,12 @@
 .logo {
     height: 26px;
     color: #fff;
+    opacity: .5;
     font-size: 36px;
     font-weight: 900;
     line-height: .6;
     display: inline-block;
+    font-family: 'Bodoni Ultra'
 
     /* @include tablets() {
         line-height: 25px;
