--- a/src/styles/blocks/menu.pcss
+++ b/src/styles/blocks/menu.pcss
@@ -131,9 +131,10 @@
     }
     &__link {
         color: #fff !important;
-        font-family: 'Open Sans', Helvetica, sans-serif !important;
-        font-weight: 400;
+        font-family: 'Parisian', Helvetica, sans-serif !important;
+        font-weight: bold;
         line-height: 30px;
+        color: #e8d3a8 !important;
         text-decoration: none !important;
         text-transform: uppercase !important;
     }
