--- a/src/styles/blocks/scroll.pcss
+++ b/src/styles/blocks/scroll.pcss
@@ -9,9 +9,10 @@
     letter-spacing: .1em;
     text-decoration: none;
     transition: opacity .3s;
+    opacity: .5;
 
     &:hover {
-        opacity: 0.5;
+        opacity: 1;
     }
 
     @media screen and (max-height: 480px) {
