--- a/src/styles/blocks/content.pcss
+++ b/src/styles/blocks/content.pcss
@@ -1,14 +1,14 @@
 .content {
     opacity: 0.5;
     color: #fff;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 30px;
+    font-size: 28px;
+    letter-spacing: 3px;
+    line-height: 34px;
     max-width: 600px;
+    font-family: 'Parisian';
 
     &--italic {
         font-style: italic;
-        font-weight: 500;
     }
 
     &--dark {
