--- a/src/styles/blocks/copyright.pcss
+++ b/src/styles/blocks/copyright.pcss
@@ -1,8 +1,8 @@
 .copyright {
     opacity: 0.1;
     color: #fff;
-    font-size: 48px;
-    font-weight: 600;
+    font-size: 34px;
+    font-family: 'Michelle';
     line-height: 30px;
     display: inline-block;
     margin-bottom: 30px;
