--- a/src/styles/blocks/hero-title.pcss
+++ b/src/styles/blocks/hero-title.pcss
@@ -4,10 +4,11 @@
     min-width: 800px;
 
     &__info {
-        opacity: 0.4;
+        opacity: 0.7;
         color: #fff;
+        font-family: 'Michelle';
         font-size: 18px;
-        font-weight: 600;
+        text-transform: uppercase;
         line-height: 30px;
         display: inline-block;
         width: 165px;
@@ -35,37 +36,43 @@
     }
 
     &__name {
+        font-family: 'Show Boat';
+        text-transform: uppercase;
         display: inline-block;
         padding: 0;
         width: 500px;
-        color: #fff;
-        font-size: 72px;
-        font-weight: 900;
-        line-height: 60px;
+        color: #e8d3a8;
+        font-size: 120px;
+        line-height: 110px;
         text-align: left;
         margin-left: 60px;
         vertical-align: top;
         background-clip: text;
-        text-shadow: 3px 0px 3px rgba(0,0,0,0.5);
+        transform: skew(-2deg, -8deg);
+        
 
         @include tablets() {
             display: block;
-            margin: 0 auto;
+            margin: 30px auto 0;
             text-align: center;
-            font-size: 48px;
-            width: 50%;
+            font-size: 80px;
+            line-height: 70px;
+            width: 60%;
+            transform: skew(0, 0);
         }
         @include phones() {
+            font-size: 48px;
+            line-height: 60px;
             width: 45%;
         }
 
         &--small {
-            font-weight: 700;
             display: block;
             font-size: 36px;
             line-height: 48px;
             width: auto;
             margin-left: 0;
+            transform: skew(0, 0);
 
             @include tablets() {
                 margin: 0;
@@ -81,17 +88,19 @@
 
     &--parallax {
         position: absolute;
-        top: 37%;
+        top: 33%;
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(-60%, -50%);
+        text-shadow: 3px 0px 3px rgba(0,0,0,0.5);
 
         @include desktopHd() {
-            top: 26%;
+            top: 24%;
         }
 
         @include tablets() {
             top: 35%;
             left: 50%;
+            transform: translate(-50%, -50%) skew(0, 0);
         }
 
         @media screen and (max-height: 480px) {
