--- a/src/styles/blocks/preloader.pcss
+++ b/src/styles/blocks/preloader.pcss
@@ -6,6 +6,11 @@
     height: 100%;
     top: 0;
     left: 0;
+    transition: ease-in-out 1.5s;
+
+    &.done {
+        opacity: 0;
+    }
 }
 .orbit-spinner {
     position: absolute;
