--- a/src/styles/blocks/title.pcss
+++ b/src/styles/blocks/title.pcss
@@ -1,7 +1,8 @@
 .title {
-    color: #fff;
+    font-family: 'Michelle';
+    color: #e8d3a8;
     font-size: 30px;
-    font-weight: 700;
+    font-weight: bold;
     line-height: 36px;
     padding-bottom: 50px;
 
