--- a/src/styles/main.pcss
+++ b/src/styles/main.pcss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800');
+@import "./fonts.pcss";
 @import "normalize.css";
 @import "./mixins.pcss";
 @import "./layout/base.pcss";
